Force fixed height to prevent text from collapsing

--- a/kasimi/mchaticonsmenu/styles/prosilver/theme/mchat.iconsmenu.css
+++ b/kasimi/mchaticonsmenu/styles/prosilver/theme/mchat.iconsmenu.css
@@ -6,6 +6,10 @@
  *
  */
 
+.mchat-buttons {
+	height: 16px;
+}
+
 .mchat-wrapper .dropdown-container-mchat-message-icons .mchat-buttons {
 	top: 0;
 }
